[0.0.0] - Bug Fixes, Readme & error handling tweaks
